--- a/sortmet/about.html
+++ b/sortmet/about.html
@@ -181,7 +181,7 @@
 			<div class="heading">
 				<h1>О компании</h1>
 			</div>
-			<section class="about-us">
+			<section class="about-us about-us_mt-0">
 				<div class="about-us__content">
 					<p>Металлотрейдинговая компания СОРТМЕТ работает в режиме гипермаркета металла, осуществляя оптовые и розничные продажи 6000 наименований металлопроката и труб. Металлопродукция поставляется напрямую с ведущих комбинатов России, СНГ, Европы.</p>
 					<p>Компания СОРТМЕТ основана в начале 2016 года. Наш офис находится в г. Люберцы. Мы принимаем заказы как оптом, так и в розницу. Наш коллектив из опытных профессионалов своего дела, некоторые из них на рынке металлопроката уже больше 15 лет. Основные направления компании являются.</p>
@@ -516,7 +516,7 @@
 
 			<section class="cta">
 				<div class="cta__content">
-					<div class="title">10 000 тонн металлопроката в наличии на 2-х складах в Московской области</div>
+					<div class="cta__title title">10 000 тонн металлопроката в наличии на 2-х складах в Московской области</div>
 					<div class="cta__text">Осуществляем оптовые и розничные продажи 12 000 наименований металлопроката и труб</div>
 					<a href="#" class="cta__btn btn">Оставить заявку</a>
 				</div>
