--- a/sortmet/exchange-and-return.html
+++ b/sortmet/exchange-and-return.html
@@ -183,7 +183,7 @@
 				<h1>Обмен и возврат</h1>
 			</div>
 
-			<div class="seo">
+			<div class="seo seo_mt-0">
 				<div class="seo__content seo__content_open">
 					<p>Наш гипермаркет располагает собственным парком специализированных грузовых автомобилей, которые адаптированы для перевозки длинного и тяжелого проката. К вашим услугам:</p>
 					<p>Автомобиль «Газель» грузоподъемностью 3 т, который может перевозить металлопрокат длиной до 6 м. Стоимость услуги по транспортировке составляет 5000 рублей плюс 20 рублей за каждый км пробега, считается в 2е стороны.</p>
