--- a/sortmet/news.html
+++ b/sortmet/news.html
@@ -176,10 +176,10 @@
 		<div class="wrapper">
 			<div class="breadcrumbs">
 				<a href="#" class="breadcrumbs__item">Главная</a>
-				<span class="breadcrumbs__item">Политики</span>
+				<span class="breadcrumbs__item">Новости и статьи</span>
 			</div>
 			<div class="heading heading_with-content">
-				<h1>Политика в отношении обработки персональных данных</h1>
+				<h1>Новости и статьи</h1>
 			</div>
 
 			<div class="news-page">
