--- a/sortmet/payment.html
+++ b/sortmet/payment.html
@@ -183,13 +183,13 @@
 				<h1>Оплата</h1>
 			</div>
 
-			<div class="seo">
+			<div class="seo seo_mt-0">
 				<div class="seo__content seo__content_open">
 					<p>Наш гипермаркет располагает собственным парком специализированных грузовых автомобилей, которые адаптированы для перевозки длинного и тяжелого проката. К вашим услугам:</p>
 					<p>Автомобиль «Газель» грузоподъемностью 3 т, который может перевозить металлопрокат длиной до 6 м. Стоимость услуги по транспортировке составляет 5000 рублей плюс 20 рублей за каждый км пробега, считается в 2е стороны.</p>
 					<p>Автомобиль «Валдай». Грузоподъемность 5 т, максимальная длина загружаемого проката – 6 м. Цена заказа машины 8000 р плюс оплата 25 р за каждый км, считается в 2е стороны</p>
 					<p>Автомобиль МАЗ. Спецтранспорт с кузовом, в который влезает металлический прокат длиной до 12 м. За один рейс можно загрузить 20 т продукции. Цена заказа машины 12000 р плюс оплата 40 р за каждый км, считается в 2е стороны.</p>
-					<ul>
+					<ul class="mb-0">
 						<li>Автомобиль «Газель» грузоподъемностью 3 т, который может перевозить металлопрокат длиной до 6 м. Стоимость услуги по транспортировке составляет 4000 рублей плюс 20 рублей за каждый км пробега, считается в 2е стороны.</li>
 						<li>Автомобиль «Валдай». Грузоподъемность 5 т, максимальная длина загружаемого проката – 6 м. Цена заказа машины 7000 р плюс оплата 25 р за каждый км, считается в 2е стороны</li>
 						<li>Автомобиль МАЗ. Спецтранспорт с кузовом, в который влезает металлический прокат длиной до 12 м. За один рейс можно загрузить 20 т продукции. Цена заказа машины 10000 р плюс оплата 40 р за каждый км, считается в 2е стороны.</li>
