--- a/sortmet/popups.html
+++ b/sortmet/popups.html
@@ -176,138 +176,118 @@
 		<div class="wrapper">
 			<div class="breadcrumbs">
 				<a href="#" class="breadcrumbs__item">Главная</a>
-				<span class="breadcrumbs__item">Доставка</span>
+				<span class="breadcrumbs__item">Попапы</span>
 			</div>
-
 			<div class="heading">
-				<h1>Доставка</h1>
+				<h1>Попапы</h1>
 			</div>
-
-			<div class="seo seo_mt-0">
-				<div class="seo__content seo__content_open">
-					<p>Наш гипермаркет располагает собственным парком специализированных грузовых автомобилей, которые адаптированы для перевозки длинного и тяжелого проката. К вашим услугам:</p>
-					<p>Автомобиль «Газель» грузоподъемностью 3 т, который может перевозить металлопрокат длиной до 6 м. Стоимость услуги по транспортировке составляет 5000 рублей плюс 20 рублей за каждый км пробега, считается в 2е стороны.</p>
-					<p>Автомобиль «Валдай». Грузоподъемность 5 т, максимальная длина загружаемого проката – 6 м. Цена заказа машины 8000 р плюс оплата 25 р за каждый км, считается в 2е стороны</p>
-					<p>Автомобиль МАЗ. Спецтранспорт с кузовом, в который влезает металлический прокат длиной до 12 м. За один рейс можно загрузить 20 т продукции. Цена заказа машины 12000 р плюс оплата 40 р за каждый км, считается в 2е стороны.</p>
-					<ul>
-						<li>Автомобиль «Газель» грузоподъемностью 3 т, который может перевозить металлопрокат длиной до 6 м. Стоимость услуги по транспортировке составляет 4000 рублей плюс 20 рублей за каждый км пробега, считается в 2е стороны.</li>
-						<li>Автомобиль «Валдай». Грузоподъемность 5 т, максимальная длина загружаемого проката – 6 м. Цена заказа машины 7000 р плюс оплата 25 р за каждый км, считается в 2е стороны</li>
-						<li>Автомобиль МАЗ. Спецтранспорт с кузовом, в который влезает металлический прокат длиной до 12 м. За один рейс можно загрузить 20 т продукции. Цена заказа машины 10000 р плюс оплата 40 р за каждый км, считается в 2е стороны.</li>
-					</ul>
-				</div>
+			<div class="btns">
+				<div class="btn popup-controller" data-popup="1">Возникли вопросы?</div>	
+				<div class="btn popup-controller" data-popup="2">Обратная связь</div>	
+				<div class="btn popup-controller" data-popup="3">Откликнуться на вакансию Sortmet</div>	
+				<div class="btn popup-controller" data-popup="4">Узнать о поступлении</div>	
+				<div class="btn popup-controller" data-popup="5">Расчёт по вашей номенклатуре</div>	
 			</div>
-
-			<div class="delivery">
-					<div class="detivery__title title">Стоимость доставки</div>
-					<div class="delivery__inner">
-						<div class="delivery__block">
-							<form action="" class="delivery__form">
-								<input type="text" placeholder="Введите адрес доставки" class="delivery__input">
-							</form>
-							<div class="delivery__switcher">
-								<div class="delivery__switcher-item delivery__switcher-item_active">Газель 3 тн</div>
-								<div class="delivery__switcher-item">Валдай 5 тн</div>
-								<div class="delivery__switcher-item">МАЗ 20 тн</div>
-							</div>
-							<div class="delivery__total">
-								<div class="delivery__total-distance">
-									<div class="delivery__total-value">524 км</div>
-									<div class="delivery__total-caption">Расстояние от МКАД</div>
-								</div>
-								<div class="delivery__total-price">
-									<div class="delivery__total-value">25 986 р</div>
-									<div class="delivery__total-caption">Стоимость доставки</div>
-								</div>
-							</div>
-						</div>
-						<div class="delivery__block">
-							<img src="images/dest/banner-1.webp" alt="">
-						</div>
-					</div>
-					<div class="delivery__map">
-						<img src="images/dest/delivery-map.webp" alt="">
-					</div>
-					<div class="delivery__list swiper" id="delivery-slider">
-						<div class="swiper-wrapper">
-							<div class="delivery__item swiper-slide">
-								<div class="delivery__item-title">Газель</div>
-								<div class="delivery__item-characteristics">
-									<div class="delivery__item-characteristic">
-										<div class="delivery__item-characteristic-caption">Грузоподъемность</div>
-										<div class="delivery__item-characteristic-value">1,5 тн</div>
-									</div>
-									<div class="delivery__item-characteristic">
-										<div class="delivery__item-characteristic-caption">Базовая ставка</div>
-										<div class="delivery__item-characteristic-value">5 000 р</div>
-									</div>
-									<div class="delivery__item-characteristic">
-										<div class="delivery__item-characteristic-caption">Длина кузова</div>
-										<div class="delivery__item-characteristic-value">6 м</div>
-									</div>
-									<div class="delivery__item-characteristic">
-										<div class="delivery__item-characteristic-caption">Доставка за МКАД</div>
-										<div class="delivery__item-characteristic-value">20 р/км</div>
-									</div>
-								</div>
-							</div>
-							<div class="delivery__item swiper-slide">
-								<div class="delivery__item-title">Валдай</div>
-								<div class="delivery__item-characteristics">
-									<div class="delivery__item-characteristic">
-										<div class="delivery__item-characteristic-caption">Грузоподъемность</div>
-										<div class="delivery__item-characteristic-value">5 тн</div>
-									</div>
-									<div class="delivery__item-characteristic">
-										<div class="delivery__item-characteristic-caption">Базовая ставка</div>
-										<div class="delivery__item-characteristic-value">8 000 р</div>
-									</div>
-									<div class="delivery__item-characteristic">
-										<div class="delivery__item-characteristic-caption">Длина кузова</div>
-										<div class="delivery__item-characteristic-value">6 м</div>
-									</div>
-									<div class="delivery__item-characteristic">
-										<div class="delivery__item-characteristic-caption">Доставка за МКАД</div>
-										<div class="delivery__item-characteristic-value">30 р/км</div>
-									</div>
-								</div>
-							</div>
-							<div class="delivery__item swiper-slide">
-								<div class="delivery__item-title">МАЗ</div>
-								<div class="delivery__item-characteristics">
-									<div class="delivery__item-characteristic">
-										<div class="delivery__item-characteristic-caption">Грузоподъемность</div>
-										<div class="delivery__item-characteristic-value">20 тн</div>
-									</div>
-									<div class="delivery__item-characteristic">
-										<div class="delivery__item-characteristic-caption">Базовая ставка</div>
-										<div class="delivery__item-characteristic-value">12 000 р</div>
-									</div>
-									<div class="delivery__item-characteristic">
-										<div class="delivery__item-characteristic-caption">Длина кузова</div>
-										<div class="delivery__item-characteristic-value">12 м</div>
-									</div>
-									<div class="delivery__item-characteristic">
-										<div class="delivery__item-characteristic-caption">Доставка за МКАД</div>
-										<div class="delivery__item-characteristic-value">40 р/км</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+			<div class="popup" data-popup="1">
+				<div class="popup__close"></div>
+				<div class="popup__icon">
+					<svg width="76" height="76">
+						<use xlink:href="images/dest/sprite.svg#popup-1"></use>
+					</svg>
+				</div>
+				<div class="popup__title">Возникли вопросы?</div>
+				<div class="popup__description">Наш эксперт перезвонит вам за 30 секунд и поможет с выбором</div>
+				<div class="input">
+					<label class="input__label" for="name">Ваше имя</label>
+					<input class="input__input" type="text" name="name" id="name">
+				</div>
+				<div class="input">
+					<label class="input__label" for="phone">Номер телефона</label>
+					<input class="input__input" type="text" name="phone" id="phone">
+				</div>
+				<button class="btn btn-big popup__btn">Перезвоните мне</button>
+				<div class="popup__policy">Заполняя форму вы соглашаетесь на <a href="#">обработку персональных данных</a></div>
 			</div>
-
-			<form action="" class="form form_blue">
-				<div class="form__block">
-					<div class="form__title">Проконсультируем по любым вопросам</div>
-					<div class="form__description">оставьте заявку и наш менеджер поможет с выбором и оформить заказ</div>
+			<div class="popup" data-popup="2">
+				<div class="popup__close"></div>
+				<div class="popup__icon">
+					<svg width="76" height="76">
+						<use xlink:href="images/dest/sprite.svg#popup-2"></use>
+					</svg>
 				</div>
-				<div class="form__block">
-					<input type="text" class="form__input" placeholder="+7 999 999 99 99">
-					<button class="form__button">Отправить</button>
-					<div class="form__policy">Заполняя форму вы соглашаетесь на <a href="#">обработку персональных данных</a></div>	
+				<div class="popup__title">Обратная связь</div>
+				<div class="popup__description">Оставьте свои данные и мы перезвоним вам в течение 1 минуты</div>
+				<div class="input">
+					<label class="input__label" for="name">Ваше имя</label>
+					<input class="input__input" type="text" name="name" id="name">
 				</div>
-			</form>
-			
+				<div class="input">
+					<label class="input__label" for="phone">Номер телефона</label>
+					<input class="input__input" type="text" name="phone" id="phone">
+				</div>
+				<button class="btn btn-big popup__btn">Перезвоните мне</button>
+				<div class="popup__policy">Заполняя форму вы соглашаетесь на <a href="#">обработку персональных данных</a></div>
+			</div>
+			<div class="popup" data-popup="3">
+				<div class="popup__close"></div>
+				<div class="popup__icon">
+					<svg width="76" height="76">
+						<use xlink:href="images/dest/sprite.svg#popup-3"></use>
+					</svg>
+				</div>
+				<div class="popup__title">Откликнуться на вакансию Sortmet</div>
+				<div class="popup__description">Мы свяжемся с вами после рассмотрения</div>
+				<div class="input">
+					<label class="input__label" for="name">Ваше имя</label>
+					<input class="input__input" type="text" name="name" id="name">
+				</div>
+				<div class="input">
+					<label class="input__label" for="phone">Номер телефона</label>
+					<input class="input__input" type="text" name="phone" id="phone">
+				</div>
+				<button class="btn btn-big popup__btn">Перезвоните мне</button>
+				<div class="popup__policy">Заполняя форму вы соглашаетесь на <a href="#">обработку персональных данных</a></div>
+			</div>
+			<div class="popup" data-popup="4">
+				<div class="popup__close"></div>
+				<div class="popup__icon">
+					<svg width="76" height="76">
+						<use xlink:href="images/dest/sprite.svg#popup-4"></use>
+					</svg>
+				</div>
+				<div class="popup__title">Узнать о поступлении</div>
+				<div class="popup__description">Оставьте свои данные и мы сообщим вам о поступлении товара или подберем аналог</div>
+				<div class="input">
+					<label class="input__label" for="name">Ваше имя</label>
+					<input class="input__input" type="text" name="name" id="name">
+				</div>
+				<div class="input">
+					<label class="input__label" for="phone">Номер телефона</label>
+					<input class="input__input" type="text" name="phone" id="phone">
+				</div>
+				<button class="btn btn-big popup__btn">Подтвердить</button>
+				<div class="popup__policy">Заполняя форму вы соглашаетесь на <a href="#">обработку персональных данных</a></div>
+			</div>
+			<div class="popup" data-popup="5">
+				<div class="popup__close"></div>
+				<div class="popup__icon">
+					<svg width="76" height="76">
+						<use xlink:href="images/dest/sprite.svg#popup-5"></use>
+					</svg>
+				</div>
+				<div class="popup__title">Расчёт по вашей номенклатуре</div>
+				<div class="popup__description">Мы поможем вам избавиться от лишних хлопот и произведем расчеты со всеми подробностями</div>
+				<div class="input">
+					<label class="input__label" for="name">Ваше имя</label>
+					<input class="input__input" type="text" name="name" id="name">
+				</div>
+				<div class="input">
+					<label class="input__label" for="phone">Номер телефона</label>
+					<input class="input__input" type="text" name="phone" id="phone">
+				</div>
+				<button class="btn btn-big popup__btn">Перезвоните мне</button>
+				<div class="popup__policy">Заполняя форму вы соглашаетесь на <a href="#">обработку персональных данных</a></div>
+			</div>
 		</div>
 	
 		<footer class="footer">
