--- a/sortmet/reviews.html
+++ b/sortmet/reviews.html
@@ -196,7 +196,7 @@
 				}
 			</style>
 
-			<div class="reviews">
+			<div class="reviews reviews_mt-0">
 				<div class="reviews__list reviews__list-flex">
 					<div class="reviews__item reviews__item-flex">
 						<div class="reviews__item-content">
