--- a/sortmet/services-detail.html
+++ b/sortmet/services-detail.html
@@ -419,7 +419,7 @@
 		
 		</div>
 
-		<div class="gray gray_pb">
+		<div class="gray gray_pb gray_without-after">
 			<div class="wrapper">
 				<section class="how-buy">
 					<div class="title">
