--- a/sortmet/services.html
+++ b/sortmet/services.html
@@ -463,7 +463,7 @@
 			</section>
 		</div>
 
-		<div class="gray gray_pb">
+		<div class="gray gray_pb gray_without-after">
 			<div class="wrapper">
 				<section class="how-buy">
 					<div class="title">
