--- a/akticom/index.html
+++ b/akticom/index.html
@@ -37,7 +37,7 @@
 		<div class="experience">
 			<div class="wrapper">
 				<div class="experience__content">
-					<div class="experience__title">Лучшие в своем деле</div>
+					<div class="experience__title title">Лучшие в своем деле</div>
 					<div class="experience__button button">Обсудить проект</div>
 				</div>
 			</div>
@@ -91,6 +91,9 @@
 					<div class="projects__item">
 						<div class="projects__item-info">
 							<div class="projects__item-title">Название проекта</div>
+							<div class="projects__item-image projects__item-image--mobile">
+								<img src="images/dest/project-1.jpg" alt="">
+							</div>
 							<div class="projects__item-text">Краткое описание проекта в несколько срок, возможно с  буллетами о  статистике достижений</div>
 							<a href="#" class="projects__item-button button">Посмотреть кейс</a>
 						</div>
@@ -101,6 +104,9 @@
 					<div class="projects__item">
 						<div class="projects__item-info">
 							<div class="projects__item-title">Название проекта</div>
+							<div class="projects__item-image projects__item-image--mobile">
+								<img src="images/dest/project-2.jpg" alt="">
+							</div>
 							<div class="projects__item-text">Краткое описание проекта в несколько срок, возможно с  буллетами о  статистике достижений</div>
 							<a href="#" class="projects__item-button button">Посмотреть кейс</a>
 						</div>
@@ -111,11 +117,48 @@
 					<div class="projects__item">
 						<div class="projects__item-info">
 							<div class="projects__item-title">Название проекта</div>
+							<div class="projects__item-image projects__item-image--mobile">
+								<img src="images/dest/project-3.jpg" alt="">
+							</div>
 							<div class="projects__item-text">Краткое описание проекта в несколько срок, возможно с  буллетами о  статистике достижений</div>
 							<a href="#" class="projects__item-button button">Посмотреть кейс</a>
 						</div>
 						<div class="projects__item-image">
 							<img src="images/dest/project-3.jpg" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="quiz">
+			<div class="wrapper">
+				<div class="quiz__inner">
+					<div class="quiz__info">
+						<div class="quiz__title title">Давайте обсудим ваш проект</div>
+						<div class="quiz__policy">Нажимая на кнопку, вы соглашаетесь с Политикой персональных данных</div>
+					</div>
+					<div class="quiz__form quiz-form">
+						<div class="quiz-form__progress">
+							Шаг 1 из 5
+							<div class="quiz-form__progress-line" data-step="1"></div>
+						</div>
+						<div class="quiz-form__inner">
+							<div class="quiz-form__block">
+								<div class="quiz-form__block-title">Выберите тип проекта</div>
+								<div class="quiz-form__block-variants">
+									<div class="quiz-form__block-variant quiz-form__block-variant--landing">Лендинг</div>
+									<div class="quiz-form__block-variant quiz-form__block-variant--mobile-app">Мобильное приложение</div>
+									<div class="quiz-form__block-variant quiz-form__block-variant--site">Многостраничный сайт</div>
+									<div class="quiz-form__block-variant quiz-form__block-variant--shop">Интернет-магазин</div>
+								</div>
+							</div>
+							<div class="quiz-form__steps">
+								<div class="quiz-form__step -active">Тип проекта</div>
+								<div class="quiz-form__step">Услуга</div>
+								<div class="quiz-form__step">Состояние</div>
+								<div class="quiz-form__step">Старт</div>
+								<div class="quiz-form__step">Контакты</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -143,7 +186,48 @@
 				</div>
 			</div>
 		</footer>
-		<!-- Подключаем скрипты проекта -->
+		<div class="menu">
+			<div class="wrapper">
+				<div class="menu__inner">
+					<div class="menu__top">
+						<div class="menu__logo logo">
+							<img src="images/dest/logo.svg" alt="">
+						</div>
+						<div class="menu__close menu-button menu-button--close">Меню</div>
+					</div>
+					<div class="menu__list">
+						<div class="menu__block">
+							<div class="menu__item">Услуги</div>
+							<div class="menu__item">Кейсы</div>
+							<div class="menu__item">Блог</div>
+							<div class="menu__item">Контакты</div>
+						</div>
+						<div class="menu__block">
+							<div class="menu__item">Дизайн</div>
+							<div class="menu__item">Разработка</div>
+							<div class="menu__item">Аналитика</div>
+							<div class="menu__item">Продвижение</div>
+							<div class="menu__item">Реклама</div>
+							<div class="menu__item">Техподдержка</div>
+						</div>
+						<div class="menu__block">
+							<div class="menu__item">Дизайн сайтов</div>
+							<div class="menu__item">Дизайн мобильного приложения</div>
+							<div class="menu__item">Дизайн корпоративных сайтов</div>
+							<div class="menu__item">Дизайн интернет-магазина</div>
+						</div>
+					</div>
+					<div class="menu__bottom">
+						<div class="menu__contacts">
+							<a href="tel:+74954093216" class="menu__phone phone">+7 (495) 409-32-16</a>
+							<a href="tel:+78463132320" class="menu__phone phone">+7 (846) 313-23-20</a>
+							<a href="mailto:mail@akticom.ru" class="menu__email email">mail@akticom.ru</a>
+						</div>
+						<div class="menu__button button">Обсудить проект</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<script src="js/app.min.js"></script>
 	</body>
 </html>
