--- a/uzmolkom/app/index.html
+++ b/uzmolkom/app/index.html
@@ -28,7 +28,7 @@
 										<a href="#" class="socials__item socials__item--tg"></a>
 									</div>
 								</div>
-								<div class="header__callback btn btn-white">Обратный звонок</div>
+								<div class="header__callback btn btn--white">Обратный звонок</div>
 							</div>
 						</div>
 						<div class="header__menu menu">
@@ -708,7 +708,7 @@
 								<div class="projects__item-title">Название проекта</div>
 								<div class="projects__item-text">Разработка ингредиентов для пищевых производств – наша сильная сторона бизнеса. Текст с информацией о компании, производстве, опыте и преимуществах. Текст с информацией о компании, производстве, опыте и преимуществах.</div>
 							</div>
-							<a href="#" class="projects__item-btn btn btn-white">Смотреть проект</a>
+							<a href="#" class="projects__item-btn btn btn--white">Смотреть проект</a>
 						</div>
 						<div class="projects__item">
 							<img src="images/dest/projects-1.png" alt="" class="projects__item-image">
@@ -716,7 +716,7 @@
 								<div class="projects__item-title">Название проекта</div>
 								<div class="projects__item-text">Разработка ингредиентов для пищевых производств – наша сильная сторона бизнеса. Текст с информацией о компании, производстве, опыте и преимуществах. Текст с информацией о компании, производстве, опыте и преимуществах.</div>
 							</div>
-							<a href="#" class="projects__item-btn btn btn-white">Смотреть проект</a>
+							<a href="#" class="projects__item-btn btn btn--white">Смотреть проект</a>
 						</div>
 						<div class="projects__item">
 							<img src="images/dest/projects-2.png" alt="" class="projects__item-image">
@@ -724,7 +724,7 @@
 								<div class="projects__item-title">Название проекта</div>
 								<div class="projects__item-text">Разработка ингредиентов для пищевых производств – наша сильная сторона бизнеса. Текст с информацией о компании, производстве, опыте и преимуществах. Текст с информацией о компании, производстве, опыте и преимуществах.</div>
 							</div>
-							<a href="#" class="projects__item-btn btn btn-white">Смотреть проект</a>
+							<a href="#" class="projects__item-btn btn btn--white">Смотреть проект</a>
 						</div>
 					</div>
 				</section>
@@ -909,7 +909,7 @@
 								</div>
 							</div>
 						</div>	
-						<div class="list__pagination list-slider-swiper-pagination"></div>
+						<div class="list__slider-pagination list-slider-swiper-pagination"></div>
 						<a href="#" class="list__btn list__btn--mobile btn">Все новости</a>
 					</div>
 				</section>
