--- a/uzmolkom/app/index.html
+++ b/uzmolkom/app/index.html
@@ -695,36 +695,36 @@
 					</div>
 				</section>
 
-			 	<section class="projects">
-					<div class="projects__top">
-						<div class="projects__sub-title sub-title">Реализованные проекты</div>
-						<a href="#" class="projects__btn btn">Смотреть все проекты</a>
+			 	<section class="projects-block">
+					<div class="projects-block__top">
+						<div class="btn--white__sub-title sub-title">Реализованные проекты</div>
+						<a href="#" class="projects-block__btn btn">Смотреть все проекты</a>
 					</div>
-					<div class="projects__title title">Разрабатываем качественную продукцию по международным стандартам</div>
-					<div class="projects__list">
-						<div class="projects__item">
-							<img src="images/dest/projects-1.png" alt="" class="projects__item-image">
-							<div class="projects__item-content">
-								<div class="projects__item-title">Название проекта</div>
-								<div class="projects__item-text">Разработка ингредиентов для пищевых производств – наша сильная сторона бизнеса. Текст с информацией о компании, производстве, опыте и преимуществах. Текст с информацией о компании, производстве, опыте и преимуществах.</div>
+					<div class="projects-block__title title">Разрабатываем качественную продукцию по международным стандартам</div>
+					<div class="projects-block__list">
+						<div class="projects-block__item">
+							<img src="images/dest/projects-1.png" alt="" class="projects-block__item-image">
+							<div class="projects-block__item-content">
+								<div class="projects-block__item-title">Название проекта</div>
+								<div class="projects-block__item-text">Разработка ингредиентов для пищевых производств – наша сильная сторона бизнеса. Текст с информацией о компании, производстве, опыте и преимуществах. Текст с информацией о компании, производстве, опыте и преимуществах.</div>
 							</div>
-							<a href="#" class="projects__item-btn btn btn--white">Смотреть проект</a>
+							<a href="#" class="projects-block__item-btn btn btn--white">Смотреть проект</a>
 						</div>
-						<div class="projects__item">
-							<img src="images/dest/projects-1.png" alt="" class="projects__item-image">
-							<div class="projects__item-content">
-								<div class="projects__item-title">Название проекта</div>
-								<div class="projects__item-text">Разработка ингредиентов для пищевых производств – наша сильная сторона бизнеса. Текст с информацией о компании, производстве, опыте и преимуществах. Текст с информацией о компании, производстве, опыте и преимуществах.</div>
+						<div class="projects-block__item">
+							<img src="images/dest/projects-1.png" alt="" class="projects-block__item-image">
+							<div class="projects-block__item-content">
+								<div class="projects-block__item-title">Название проекта</div>
+								<div class="projects-block__item-text">Разработка ингредиентов для пищевых производств – наша сильная сторона бизнеса. Текст с информацией о компании, производстве, опыте и преимуществах. Текст с информацией о компании, производстве, опыте и преимуществах.</div>
 							</div>
-							<a href="#" class="projects__item-btn btn btn--white">Смотреть проект</a>
+							<a href="#" class="projects-block__item-btn btn btn--white">Смотреть проект</a>
 						</div>
-						<div class="projects__item">
-							<img src="images/dest/projects-2.png" alt="" class="projects__item-image">
-							<div class="projects__item-content">
-								<div class="projects__item-title">Название проекта</div>
-								<div class="projects__item-text">Разработка ингредиентов для пищевых производств – наша сильная сторона бизнеса. Текст с информацией о компании, производстве, опыте и преимуществах. Текст с информацией о компании, производстве, опыте и преимуществах.</div>
+						<div class="projects-block__item">
+							<img src="images/dest/projects-2.png" alt="" class="projects-block__item-image">
+							<div class="projects-block__item-content">
+								<div class="projects-block__item-title">Название проекта</div>
+								<div class="projects-block__item-text">Разработка ингредиентов для пищевых производств – наша сильная сторона бизнеса. Текст с информацией о компании, производстве, опыте и преимуществах. Текст с информацией о компании, производстве, опыте и преимуществах.</div>
 							</div>
-							<a href="#" class="projects__item-btn btn btn--white">Смотреть проект</a>
+							<a href="#" class="projects-block__item-btn btn btn--white">Смотреть проект</a>
 						</div>
 					</div>
 				</section>
